--- a/programmable_video/example/web/index.html
+++ b/programmable_video/example/web/index.html
@@ -30,7 +30,7 @@
   <title>example</title>
   <link rel="manifest" href="manifest.json">
 
-  <script src="//media.twiliocdn.com/sdk/js/video/releases/2.14.0/twilio-video.min.js"></script>
+  <script src="//sdk.twilio.com/js/video/releases/2.17.1/twilio-video.min.js"></script>
 </head>
 
 <body>
